@@ -1,1 +1,7 @@
+import sys, os 
+import warnings
+warnings.simplefilter('ignore', RuntimeWarning)
+
 from _mygui_ import *
+
+warnings.resetwarnings( )
